[gd_scene load_steps=17 format=2]

[ext_resource path="res://Enemy/Ghost Enemy.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Ghost.gd" type="Script" id=2]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=3]
[ext_resource path="res://Boxes/Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemy/PlayerDetector.gd" type="Script" id=5]
[ext_resource path="res://Boxes/Hitbox.tscn" type="PackedScene" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=6]
radius = 5.0
height = 2.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 7.0
height = 4.0

[sub_resource type="CircleShape2D" id=8]
radius = 92.0054

[sub_resource type="CircleShape2D" id=9]
radius = 8.0

[sub_resource type="Animation" id=10]
resource_name = "FireHit"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Color( 0.866667, 0.258824, 0.258824, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Ghost" type="KinematicBody2D"]
collision_layer = 4
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 1 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="StateTimer" type="Timer" parent="."]
one_shot = true

[node name="Stats" parent="." instance=ExtResource( 3 )]
max_health = 3

[node name="Hurtbox" parent="." instance=ExtResource( 4 )]
visible = false
collision_layer = 16

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -1 )
shape = SubResource( 7 )

[node name="PlayerDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 8 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
visible = false
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 9 )

[node name="HitAnimator" type="AnimationPlayer" parent="."]
anims/FireHit = SubResource( 10 )

[connection signal="timeout" from="StateTimer" to="." method="_on_StateTimer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="PlayerDetector" to="PlayerDetector" method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="PlayerDetector" method="_on_PlayerDetector_body_exited"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
